<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity" android:gravity="center_horizontal"
    android:background="@color/backgroundColor">

    <TextView android:id="@+id/text1" android:text="@string/title"
        android:layout_width="@dimen/view_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/title_bottom_margin"
        style="@android:style/TextAppearance.Large" />

    <Button android:id="@+id/btn1" android:onClick="btnClick"
        style="@style/btnStyle"
        android:text="@string/popular_movies"
        android:layout_below="@id/text1"
        />
    <Button android:id="@+id/btn2" android:onClick="btnClick"
        style="@style/btnStyle"
        android:text="@string/stock_hawk"
        android:layout_below="@id/btn1"
        />
    <Button android:id="@+id/btn3" android:onClick="btnClick"
        style="@style/btnStyle"
        android:text="@string/build_it_bigger"
        android:layout_below="@id/btn2"
        />
    <Button android:id="@+id/btn4" android:onClick="btnClick"
        style="@style/btnStyle"
        android:text="@string/make_it_material"
        android:layout_below="@id/btn3"
        />
    <Button android:id="@+id/btn5" android:onClick="btnClick"
        style="@style/btnStyle"
        android:text="@string/go_ubiquitous"
        android:layout_below="@id/btn4"
        />
    <Button android:id="@+id/btn6" android:onClick="btnClick"
        style="@style/capstoneBtnStyle"
        android:text="@string/capstone_my_own_app"
        android:layout_below="@id/btn5"
        />
</RelativeLayout>
